# veronymous-client-agent

./: .gitignore  Cargo.toml  Cross.toml  README.md
veronymous-android-app/: build.gradle.kts  settings.gradle.kts  update-veronymous-lib.sh
veronymous-android-app/app/: build.gradle.kts  google-services.json
veronymous-android-app/app/android-veronymous-client/: build.gradle.kts
veronymous-android-app/app/android-veronymous-client/src/androidTest/java/io/veronymous/android/veronymous/client/: ExampleInstrumentedTest.kt
veronymous-android-app/app/android-veronymous-client/src/main/java/io/veronymous/android/veronymous/client/: VeronymousClient.java
veronymous-android-app/app/android-veronymous-client/src/main/java/io/veronymous/android/veronymous/client/config/: VeronymousConfig.java
veronymous-android-app/app/android-veronymous-client/src/main/java/io/veronymous/android/veronymous/client/exceptions/: VeronymousIOException.java  VeronymousParseException.java  VpnConnectionException.java
veronymous-android-app/app/android-veronymous-client/src/main/java/io/veronymous/android/veronymous/client/listener/: VeronymousTaskListener.java
veronymous-android-app/app/android-veronymous-client/src/main/java/io/veronymous/android/veronymous/client/model/: WireguardConnection.java
veronymous-android-app/app/android-veronymous-client/src/main/res/values/: connected_icon_background.xml
veronymous-android-app/app/android-veronymous-client/src/test/java/io/veronymous/android/veronymous/client/: ExampleUnitTest.kt
veronymous-android-app/app/src/androidTest/java/io/veronymous/android/vpn/app/: ExampleInstrumentedTest.kt
veronymous-android-app/app/src/main/: AndroidManifest.xml
veronymous-android-app/app/src/main/java/io/veronymous/android/vpn/app/broadcast/: ConnectionUpdateBroadcastReceiver.kt
veronymous-android-app/app/src/main/java/io/veronymous/android/vpn/app/service/: VeronymousVpnService.kt
veronymous-android-app/app/src/main/java/io/veronymous/android/vpn/app/state/: VpnState.kt
veronymous-android-app/app/src/main/java/io/veronymous/android/vpn/app/wg/: VeronymousTunnel.kt
veronymous-android-app/app/src/main/java/io/veronymous/vpn/android/app/broadcast/: ConnectionUpdateBroadcastReceiver.kt
veronymous-android-app/app/src/main/java/io/veronymous/vpn/android/app/service/: VeronymousVpnService.kt
veronymous-android-app/app/src/main/java/io/veronymous/vpn/android/app/state/: VpnState.kt
veronymous-android-app/app/src/main/java/io/veronymous/vpn/android/app/wg/: VeronymousTunnel.kt
veronymous-android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml  logo_bg_purple_without_name_16_16.xml  logo_horizontal_white.xml  logo_without_name_white.xml  logo_without_name_white_65_65.xml  logo_zk_vpn_white.xml  rounded_bg_veron.xml  rounded_bg_white.xml  rounded_bg_white_selected.xml  splash_screen.xml  veron_solid.xml  veronymous_icon_foreground.xml  veronymous_icon_white_20_20.xml  wave_background_1.xml
veronymous-android-app/app/src/main/res/layout/: activity_main.xml  connected_server_view.xml  connecting_layout.xml  connection_fragment.xml  disconnecting_layout.xml  home_fragment.xml  login_fragment.xml  main_banner.xml  select_server_fragment.xml  server_list_item.xml
veronymous-android-app/app/src/main/res/layout-land/: connection_fragment.xml  login_fragment.xml
veronymous-android-app/app/src/main/res/menu/: menu_options.xml
veronymous-android-app/app/src/main/res/mipmap-anydpi-v26/: veronymous_icon_round.xml
veronymous-android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml  veronymous_icon_background.xml
veronymous-android-app/app/src/test/java/io/veronymous/android/vpn/app/: ExampleUnitTest.kt
veronymous-android-app/gradle/wrapper/: gradle-wrapper.properties
veronymous-client/: Cargo.toml
veronymous-client-cli/: Cargo.toml  README.md  build_release_cli.sh  test_server.json  test_server_dev.json
veronymous-client-cli/src/: main.rs
veronymous-client-cli/src/app/: mod.rs
veronymous-client-cli/src/constants/: app.rs  cli.rs  mod.rs  veronymous.rs
veronymous-client-cli/src/error/: mod.rs
veronymous-client-cli/src/utils/: cli_utils.rs  mod.rs  path_utils.rs
veronymous-client-cli/src/vpn_client/: mod.rs
veronymous-client-cli/src/wg/: mod.rs
veronymous-client-java/veronymous-client-java/: pom.xml
veronymous-client-java/veronymous-client-java/src/main/java/io/veronymous/client/exceptions/: IllegalStateException.java  JNIException.java  UnauthorizedException.java  VeronymousClientException.java
veronymous-client-java/veronymous-client-java/src/main/java/io/veronymous/client/jni/: AuthenticateResult.java  ConnectResult.java  GetServersResult.java  ServersStateResult.java  VeronymousClientJni.java
veronymous-client-java/veronymous-client-java/src/test/java/io/veronymous/client/jni/: VeronymousClientJniTest.java
veronymous-client-jni/: Cargo.toml  build_android_dev.sh  build_android_release.sh
veronymous-client-jni/src/: lib.rs
veronymous-client/src/: lib.rs
veronymous-client/src/client/: mod.rs  state.rs
veronymous-client/src/config/: mod.rs
veronymous-client/src/constants/: mod.rs
veronymous-client/src/error/: mod.rs
veronymous-client/src/network/: endpoint.rs
veronymous-client/src/oidc/: client.rs  credentials.rs  token.rs
veronymous-client/src/servers/: mod.rs
veronymous-client/src/veronymous_token/: client.rs
veronymous-client/src/vpn/: mod.rs
veronymous-client/src/wg/: mod.rs
veronymous_client/: Cargo.toml  build.rs
veronymous_client/proto/: veronymous_user_token_service.proto
veronymous_client/src/: lib.rs
veronymous_client/src/client/: mod.rs  state.rs
veronymous_client/src/config/: mod.rs
veronymous_client/src/error/: mod.rs
veronymous_client/src/oidc/: client.rs  credentials.rs  mod.rs  token.rs
veronymous_client/src/servers/: mod.rs
veronymous_client/src/veronymous_token/: client.rs  grpc.rs
veronymous_client/src/vpn/: mod.rs
veronymous_client/src/wg/: mod.rs
(+34 files in other folders)
