[package]
name = "veronymous-client-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev-local"]
dev-local = ["veronymous-client/dev-local"]
dev-env = ["veronymous-client/dev-env"]

[dependencies]
thiserror = "1.0.32"
log = "0.4.17"
rand = "0.7"
env_logger = "0.9.1"
clap = "3.2.17"
ctrlc = { version = "3.2.3", features = ["termination"] }
rpassword = "6.0.0"
tokio = "1.20.1"
serde_json = "1.0.85"
rustc-serialize = "0.3.24"

[dependencies.veronymous-client]
path = "../veronymous-client"
optional = true

[dependencies.veronymous_token]
git = "ssh://git@github.com/boumba100/veronymous.git"
rev = "880519bacd02736de19036295c4c43eb35007cd1"
