[package]
name = "veronymous-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dev-local"]
dev-local = []
dev-env = []
production = []

[dependencies]
config = "0.13.3"
thiserror = "1.0.32"
reqwest = { version = "0.11.13", features = ["blocking", "multipart", "json", "native-tls-vendored"] }
serde = { version = "1.0.133", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0.83"
tonic = "0.8.3"
prost = "0.11.8"
rand = "0.7"
lazy_static = "1.4.0"
regex = "1.6.0"
log = "0.4.17"
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
rand_core = "0.6.4"


[dependencies.veronymous_router_client]
git = "ssh://git@github.com/boumba100/veronymous.git"
rev = "17cc0006f898fd3e499dd6c1fefdd55f4c6914c7"

[dependencies.veronymous_token]
git = "ssh://git@github.com/boumba100/veronymous.git"
rev = "17cc0006f898fd3e499dd6c1fefdd55f4c6914c7"

[dependencies.ps_signatures]
git = "ssh://git@github.com/boumba100/veronymous.git"
rev = "17cc0006f898fd3e499dd6c1fefdd55f4c6914c7"

[dependencies.crypto_common]
git = "ssh://git@github.com/boumba100/veronymous.git"
rev = "17cc0006f898fd3e499dd6c1fefdd55f4c6914c7"

[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt", "macros"] }